Version 5.3.0.10
racket/base: add progress-evt?, thread-cell-values?, prefab-key?,
 semaphore-peek-evt?, channel-put-evt?

Version 5.3.0.9
Changed the format of error messages
Added raise-argument-error, raise-result-error,
 raise-arguments-error, raise-range-error
racket/contract: added procedure-arity-includes/c
racket/sandbox: added sandbox-propagate-exceptions
racket/cmdline: add #:ps for command-line
slideshow/start: run a `slideshow' or `main' submodule, if any
Changed impersonate-struct so that accessor impersonation requires
 work only if the field is accessible via the current impersonator
 or a mutator for the same field is also impersonated

Version 5.3.0.8
Required modules are instantiated in the order that they are required
Added variable-reference->module-path-index
Added syntax-local-submodules
Added relative-in

Version 5.3.0.7
compiler/zo-struct: added cancel-id field to phase-shift

Version 5.3.0.6
racket/flonum: added flexpt
racket/unsafe/ops: added unsafe-flexpt
scribble/eval: added eval:result and eval:results

Version 5.3.0.5
Added box-cas!
racket/gui: changed open-output-text-editor to by default deliver 
 content via the current eventspace's handler thread; also
 added an #:eventspace optional argument

Version 5.3.0.4
racket/draw: added make-color, make-brush, make-pen

Version 5.3.0.3
Added module-path-index-submodule
Changed module-path-index-join to support a submodule argument

Version 5.3.0.1
ffi/unsafe: integer-type bounds consistently checked

Version 5.2.900.1
Add submodules, including module*, module-compiled-submodules
Changed module-path? to report #t for paths
Changed resolved module paths to allow lists that represent
 submodule paths; see the revised contract on resolve-module-path-name
Changed the module name resolver protocol so that a module declaration
 always triggers a notifification
Changed the load/use-compiled handler protocol to subpport a submodule
 module